src-tauri/output.txt
    Checking ai-singularity v0.1.0 (D:\Code\Tauri\AI Singularity\src-tauri)
error[E0412]: cannot find type `Arc` in this scope
  --> src\proxy\server.rs:23:17
   |
23 |     pub router: Arc<Router>,
   |                 ^^^ not found in this scope
   |
help: consider importing this struct
   |
 1 + use std::sync::Arc;
   |

error[E0412]: cannot find type `Arc` in this scope
  --> src\proxy\server.rs:24:13
   |
24 |     pub db: Arc<Database>,
   |             ^^^ not found in this scope
   |
help: consider importing this struct
   |
 1 + use std::sync::Arc;
   |

error[E0412]: cannot find type `Arc` in this scope
  --> src\proxy\server.rs:26:23
   |
26 |     pub account_pool: Arc<AccountPoolManager>,
   |                       ^^^ not found in this scope
   |
help: consider importing this struct
   |
 1 + use std::sync::Arc;
   |

error[E0412]: cannot find type `Arc` in this scope
  --> src\proxy\server.rs:35:20
   |
35 |     pub fn new(db: Arc<Database>, port: u16) -> Self {
   |                    ^^^ not found in this scope
   |
help: consider importing this struct
   |
 1 + use std::sync::Arc;
   |

error[E0433]: failed to resolve: use of undeclared type `Arc`
  --> src\proxy\server.rs:39:25
   |
39 |                 router: Arc::new(Router::new(db.clone())),
   |                         ^^^ use of undeclared type `Arc`
   |
help: consider importing this struct
   |
 1 + use std::sync::Arc;
   |

error[E0433]: failed to resolve: use of undeclared type `Arc`
  --> src\proxy\server.rs:40:31
   |
40 |                 account_pool: Arc::new(AccountPoolManager::new(db.clone())),
   |                               ^^^ use of undeclared type `Arc`
   |
help: consider importing this struct
   |
 1 + use std::sync::Arc;
   |

error[E0433]: failed to resolve: use of undeclared type `TcpListener`
  --> src\proxy\server.rs:57:24
   |
57 |         let listener = TcpListener::bind(&addr).await?;
   |                        ^^^^^^^^^^^ use of undeclared type `TcpListener`
   |
help: consider importing one of these structs
   |
 1 + use std::net::TcpListener;
   |
 1 + use tokio::net::TcpListener;
   |

warning: unused import: `anyhow::Result`
 --> src\db.rs:1:5
  |
1 | use anyhow::Result;
  |     ^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: unused imports: `Request`, `Response`, and `body::Body`
  --> src\proxy\server.rs:11:5
   |
11 |     body::Body,
   |     ^^^^^^^^^^
12 |     extract::State,
13 |     http::{Request, Response, StatusCode},
   |            ^^^^^^^  ^^^^^^^^

warning: unused import: `std::sync::Arc`
 --> src\services\balance_tracker.rs:1:5
  |
1 | use std::sync::Arc;
  |     ^^^^^^^^^^^^^^

warning: unused imports: `error`, `info`, and `warn`
 --> src\services\balance_tracker.rs:5:15
  |
5 | use tracing::{info, warn, error};
  |               ^^^^  ^^^^  ^^^^^

warning: unused import: `AppError`
 --> src\services\balance_tracker.rs:9:20
  |
9 | use crate::error::{AppError, AppResult};
  |                    ^^^^^^^^

warning: unused import: `ProviderCategory`
 --> src\services\provider.rs:2:47
  |
2 | use crate::models::{ProviderConfig, Platform, ProviderCategory};
  |                                               ^^^^^^^^^^^^^^^^

warning: unused import: `std::sync::Arc`
 --> src\services\mcp.rs:6:5
  |
6 | use std::sync::Arc;
  |     ^^^^^^^^^^^^^^

warning: unused import: `std::sync::Arc`
 --> src\services\prompts.rs:5:5
  |
5 | use std::sync::Arc;
  |     ^^^^^^^^^^^^^^

warning: unused import: `KeyStatus`
 --> src\services\alert.rs:2:44
  |
2 | use crate::models::{AlertItem, AlertLevel, KeyStatus};
  |                                            ^^^^^^^^^

warning: unused import: `rusqlite::params`
 --> src\services\alert.rs:4:5
  |
4 | use rusqlite::params;
  |     ^^^^^^^^^^^^^^^^

warning: unused import: `warn`
 --> src\services\skill.rs:5:21
  |
5 | use tracing::{info, warn, error};
  |                     ^^^^

warning: unused import: `models::ApiKey`
 --> src\store.rs:1:13
  |
1 | use crate::{models::ApiKey, AppError, AppResult};
  |             ^^^^^^^^^^^^^^

warning: unused imports: `AeadCore`, `Aead`, `Aes256Gcm`, `Nonce`, and `OsRng`
 --> src\store.rs:3:12
  |
3 |     aead::{Aead, AeadCore, KeyInit, OsRng},
  |            ^^^^  ^^^^^^^^           ^^^^^
4 |     Aes256Gcm, Nonce,
  |     ^^^^^^^^^  ^^^^^

warning: unused imports: `Engine` and `engine::general_purpose::STANDARD`
 --> src\store.rs:6:14
  |
6 | use base64::{engine::general_purpose::STANDARD, Engine};
  |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^  ^^^^^^

warning: use of deprecated type alias `std::panic::PanicInfo`: use `PanicHookInfo` instead
 --> src\panic_hook.rs:5:17
  |
5 | use std::panic::PanicInfo;
  |                 ^^^^^^^^^
  |
  = note: `#[warn(deprecated)]` on by default

warning: use of deprecated type alias `std::panic::PanicInfo`: use `PanicHookInfo` instead
  --> src\panic_hook.rs:12:54
   |
12 |     std::panic::set_hook(Box::new(move |panic_info: &PanicInfo<'_>| {
   |                                                      ^^^^^^^^^

error[E0308]: mismatched types
   --> src\proxy\server.rs:235:37
    |
235 | ...                   &prompt_tokens,
    |                       ^^^^^^^^^^^^^^ expected `&String`, found `&i64`
    |
    = note: expected reference `&std::string::String`
               found reference `&i64`

warning: unused variable: `state`
   --> src\proxy\server.rs:399:35
    |
399 | async fn handle_list_models(State(state): State<ProxyState>) -> impl IntoResponse {
    |                                   ^^^^^ help: if this is intentional, prefix it with an underscore: `_state`
    |
    = note: `#[warn(unused_variables)]` on by default

warning: unused import: `KeyInit`
 --> src\store.rs:3:28
  |
3 |     aead::{Aead, AeadCore, KeyInit, OsRng},
  |                            ^^^^^^^

Some errors have detailed explanations: E0308, E0412, E0433.
For more information about an error, try `rustc --explain E0308`.
warning: `ai-singularity` (lib) generated 18 warnings
error: could not compile `ai-singularity` (lib) due to 8 previous errors; 18 warnings emitted
